--- a/src/app/components/articles/session-audio/session-audio.component.html
+++ b/src/app/components/articles/session-audio/session-audio.component.html
@@ -71,7 +71,7 @@
 
         <!-- Ending -->
         <div class="d-block mt-2">
-            <a routerLink="/sessionaudio" class="btn btn-secondary mr-1">Back to SessionAudio Overview</a>
+            <a routerLink="{{constants.wikiUrlFrontendPrefix}}/sessionaudio" class="btn btn-secondary mr-1">Back to SessionAudio Overview</a>
             <app-delete-toggle (deleteEvent)="deleteArticle()"></app-delete-toggle>
         </div>
     </article>
