--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,18 +18,18 @@
         <ul class="navbar-nav mr-5">
             <!-- Recent Updates -->
             <li class="nav-item mx-2">
-                <a routerLink="/recent-updates" class="nav-link nav-link-text"> Recent Updates </a>
+                <a routerLink="{{constants.wikiUrlFrontendPrefix}}/recent-updates" class="nav-link nav-link-text"> Recent Updates </a>
             </li>
             <!-- Rules -->
             <li class="nav-item mx-2">
-                <a routerLink="/rules" class="nav-link"> 
+                <a routerLink="{{constants.wikiUrlFrontendPrefix}}/rules" class="nav-link"> 
                     <span class="d-md-none nav-link-text mr-3">Rules</span> 
                     <i class="fa fa-book fa-2x" aria-hidden="true"></i>
                 </a>
             </li>
             <!-- Session Audio -->
             <li class="nav-item mx-2">
-                <a class="nav-link" routerLink="/sessionaudio"> 
+                <a class="nav-link" routerLink="{{constants.wikiUrlFrontendPrefix}}/sessionaudio"> 
                     <span class="d-md-none nav-link-text mr-3">Session Audio</span> 
                     <i class="fa fa-file-audio-o fa-2x" aria-hidden="true"></i> 
                 </a>
