--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
     <!-- Header -->
     <header id="header">
         <div class="logo">
-            <a routerLink="/quest" class="article-link"><span class="fa fa-diamond fa-2x icon"> </span></a>
+            <a routerLink="{{constants.wikiUrlFrontendPrefix}}/quest" class="article-link"><span class="fa fa-diamond fa-2x icon"> </span></a>
         </div>
         <div class="content">
             <div class="inner">
@@ -15,13 +15,13 @@
         </div>
         <nav>
             <ul>
-                <li><b><a class="article-link" routerLink="/character">Characters</a></b></li>
-                <li><b><a class="article-link" routerLink="/location">Places</a></b></li>
-                <li><b><a class="article-link" routerLink="/diaryentry">Diary</a></b></li>
-                <li><b><a class="article-link" routerLink="/organization">Groups</a></b></li>
-                <li><b><a class="article-link" routerLink="/creature">Bestiary</a></b></li>
-                <li><b><a class="article-link" routerLink="/item">Items</a></b></li>
-                <li><b><a class="article-link" routerLink="/map/Aldrune">Map</a></b></li>
+                <li><b><a class="article-link" routerLink="{{constants.wikiUrlFrontendPrefix}}/character">Characters</a></b></li>
+                <li><b><a class="article-link" routerLink="{{constants.wikiUrlFrontendPrefix}}/location">Places</a></b></li>
+                <li><b><a class="article-link" routerLink="{{constants.wikiUrlFrontendPrefix}}/diaryentry">Diary</a></b></li>
+                <li><b><a class="article-link" routerLink="{{constants.wikiUrlFrontendPrefix}}/organization">Groups</a></b></li>
+                <li><b><a class="article-link" routerLink="{{constants.wikiUrlFrontendPrefix}}/creature">Bestiary</a></b></li>
+                <li><b><a class="article-link" routerLink="{{constants.wikiUrlFrontendPrefix}}/item">Items</a></b></li>
+                <li><b><a class="article-link" routerLink="{{constants.wikiUrlFrontendPrefix}}/map/Aldrune">Map</a></b></li>
             </ul>
         </nav>
     </header>
