Unified tinyMCE Settings
Moved settings of tinyMCE into app.constants so that all fields using tinyMCE Text editor can have the same settings.
Immediately applied this to the text editor field in formly field and the text-field component

--- a/src/app/components/utility/formly/formly.component.html
+++ b/src/app/components/utility/formly/formly.component.html
@@ -1,4 +1,10 @@
 <div class="form-group mb-4">
     <label for="{{to.name}}">{{to.label}}</label>
-    <editor [init]="{base_url:'/tinymce', suffix:'.min'}" id="{{to.name}}" [formControl]="formControl"></editor>
+    <editor 
+    [init]="constants.tinyMCESettings"
+    name="textEditField"
+    class="mb-2"
+    id="{{to.name}}"
+    [formControl]="formControl"
+    ></editor>
 </div>
