--- a/src/app/components/utility/textfield/textfield.component.html
+++ b/src/app/components/utility/textfield/textfield.component.html
@@ -10,29 +10,7 @@
     <div class="textfield">
         <div *ngIf="isEditState">
             <editor 
-            [init]="{
-                base_url:'/tinymce',
-                suffix:'.min',
-                plugins: [
-                    'advlist autolink lists link image charmap anchor',
-                    'searchreplace visualblocks fullscreen media',
-                    'table paste help wordcount'
-                ],
-                toolbar: [
-                    'undo redo | formatselect | bold italic underline strikethrough subscript superscript link unlink blockquote | backcolor forecolor hilitecolor fontsizeselect |',
-                    'alignleft aligncenter alignright | bullist numlist outdent indent | removeformat | table help'
-                ],
-                skin: 'oxide-dark',
-                content_css: 'dark',
-                browser_spellcheck: true,
-                menubar: false,
-                height: 500,
-                convert_urls: false,
-                relative_urls: false,
-                branding: false,
-                base_url: constants.wikiTinyMCEUrl,
-                suffix: '.min'
-            }"
+            [init]="constants.tinyMCESettings"
             name="textEditField"
             [(ngModel)]="updatedText"
             class="mb-2"
