Fixed some routerLink issues that were linking to just the host, when they should've been linking to host + prefix (currently wiki2).

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark bg-dark navbar-expand-md p-0">
     <!-- Brand -->
-    <a routerLink="" class="navbar-brand mr-5 ml-5"><strong> Aldrune Wiki </strong></a>
+    <a routerLink="{{constants.wikiUrlFrontendPrefix}}" class="navbar-brand mr-5 ml-5"><strong> Aldrune Wiki </strong></a>
     <!-- Collapsed navbar toggle -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
