--- a/src/app/components/articles/quest-overview/quest-overview.component.html
+++ b/src/app/components/articles/quest-overview/quest-overview.component.html
@@ -55,7 +55,7 @@
             </table>
         </div>
     
-        <div class="btn btn-secondary" routerLink="">Back To Frontpage</div>
+        <div class="btn btn-secondary" routerLink="{{constants.wikiUrlFrontendPrefix}}">Back To Frontpage</div>
     </article>
     <!-- Loading Spinner -->
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
