--- a/src/app/components/articles/item-article-update/item-article-update.component.html
+++ b/src/app/components/articles/item-article-update/item-article-update.component.html
@@ -21,7 +21,7 @@
         <!-- Form -->
         <form [formGroup]="form" (ngSubmit)="onSubmit(model)">
             <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
-            <button class="btn btn-dark mr-3" routerLink="..">Cancel</button>
+            <button class="btn btn-dark mr-3" routerLink="{{getCancelRoutingDestination()}}">Cancel</button>
             <button type="submit" class="btn btn-secondary">Submit</button>
         </form>
 
