Applied prefix to route used to link to item-character-create route

--- a/src/app/components/articles/character-article/character-article.component.html
+++ b/src/app/components/articles/character-article/character-article.component.html
@@ -47,7 +47,7 @@
         <!-- Items -->
         <div class="mb-5">
             <app-object-list    [articleType]="'item'" 
-            [createLink]="'/item/'+character.name+'/create'"
+            [createLink]="'/'+constants.spaPrefix+'/item/'+character.name+'/create'"
             [heading]="'Items of Note'"
             [items]="character.items"></app-object-list>
         </div>
