Bypassed inline-style removal for textfield
Textfield generally receives HTML generated through TinyMCE.
TinyMCE generally styles HTML through inline-styling.
Thus TinyMCE-generated-HTML was displayed incorrectly.
This was rectified by implementing a pipe that bypasses inline-style removal, the SafeHTMLPipe. Which was also promptly applied.

--- a/src/app/components/utility/textfield/textfield.component.html
+++ b/src/app/components/utility/textfield/textfield.component.html
@@ -17,6 +17,6 @@
             ></editor>
         </div>
 
-        <div *ngIf="!isEditState" [innerHTML]="updatedText"></div>
+        <div *ngIf="!isEditState" [innerHTML]="updatedText | safeHtml"></div>
     </div>
 </form>
