Fixed quote gallery not going out of edit mode
When editing a quote the quote gallery has a submit button. After pressing it, there are no changes in the UI, no moving back to the previous state. This was rectified

Also removed unnecessary comments

--- a/src/app/components/utility/quote-gallery/quote-gallery.component.html
+++ b/src/app/components/utility/quote-gallery/quote-gallery.component.html
@@ -62,10 +62,10 @@
         </h5>
 
         <!-- Form -->
-        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+        <form [formGroup]="form">
             <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
             <button class="btn btn-secondary mr-3" (click)="inCreateState=false; inEditState=false">Cancel</button>
-            <button type="submit" class="btn btn-outline-secondary">Submit</button>
+            <button type="submit" class="btn btn-outline-secondary" (click)="onSubmit()">Submit</button>
         </form>
 
     </blockquote>
