--- a/src/app/components/articles/session-audio/session-audio.component.html
+++ b/src/app/components/articles/session-audio/session-audio.component.html
@@ -47,20 +47,20 @@
         <!-- Timestamps -->
         <div class="w-75 mx-auto container mb-5">
             <!-- Timestamp Create Form -->
-            <form [ngClass]="{'d-none': !timestampCreateState, 'row my-1': timestampCreateState}">
+            <div [ngClass]="{'d-none': !timestampCreateState, 'row my-1': timestampCreateState}">
                 <div class="col-lg-1"></div>
-                <input type="text" name="time" class="timestamp-input black-background border border-dark col-lg-2 pr-0" maxlength="8" minlength="8" placeholder="HH:MM:SS" [(ngModel)]="timestamp_model.time" #timestampTimeInput />
-                <input type="text" name="title" class="timestamp-input black-background border border-dark col-lg-8" max-length="100" placeholder="Title..." [(ngModel)]="timestamp_model.name" />
+                <input type="text" name="time" class="timestamp-input black-background border border-dark col-lg-2 pr-0" maxlength="8" minlength="8" placeholder="HH:MM:SS" #timestampTimeInput />
+                <input type="text" name="title" class="timestamp-input black-background border border-dark col-lg-8" minlength="1" max-length="100" placeholder="Title..." #timestampNameInput />
                 <div class="col-lg-1 d-flex flex-row align-items-center">
                     <i class="icon hover-red fa fa-1-5x fa-times mx-1" (click)="cancelTimestampCreateState()"></i>
-                    <i class="icon hover-green fa fa-1-5x fa-check mx-1" (click)="createTimestamp()"></i>
+                    <i class="icon hover-green fa fa-1-5x fa-check mx-1" (click)="createTimestamp(timestampTimeInput, timestampNameInput)"></i>
                 </div>
-            </form>
+            </div>
 
             <!-- Timestamp List -->
             <div *ngFor="let timestamp of timestamps" class="row timestamp-box my-1">
                 <div class="col-1 d-flex align-items-center justify-content-center">
-                    <i class="icon fa fa-trash delete-timestamp" (click)="deleteTimestamp(timestamp.pk)"></i>
+                    <i class="icon fa fa-trash delete-timestamp" (click)="deleteTimestamp(timestamp)"></i>
                 </div>
                 <a (click)="vimePlayer.currentTime=timestamp.time" class="timestamp pointer col-2 text-align-right"> {{timeToString(timestamp.time)}} </a>    
                 <span class="col-9">{{timestamp.name}}</span>
