--- a/src/app/components/articles/session-audio/session-audio.component.html
+++ b/src/app/components/articles/session-audio/session-audio.component.html
@@ -32,7 +32,7 @@
                 Session {{priorSessionAudio.sessionNumber}}
             </a>
 
-            <div class="btn btn-primary mr-auto ml-auto" (click)="toggleTimestampCreateState(vimePlayer.currentTime, timestampTimeInput)">
+            <div class="btn btn-primary mr-auto ml-auto" (click)="toggleTimestampCreateState(vimePlayer.currentTime)">
                 Add Timestamp <i class="fa fa-clock-o ml-1"></i>
             </div>
 
@@ -47,15 +47,14 @@
         <!-- Timestamps -->
         <div class="w-75 mx-auto container mb-5">
             <!-- Timestamp Create Form -->
-            <div [ngClass]="{'d-none': !timestampCreateState, 'row my-1': timestampCreateState}">
+            <form [formGroup]="timestampForm" [ngClass]="{'d-none': !timestampCreateState, 'row my-1': timestampCreateState}">
                 <div class="col-lg-1"></div>
-                <input type="text" name="time" class="timestamp-input black-background border border-dark col-lg-2 pr-0" maxlength="8" minlength="8" placeholder="HH:MM:SS" #timestampTimeInput />
-                <input type="text" name="title" class="timestamp-input black-background border border-dark col-lg-8" minlength="1" max-length="100" placeholder="Title..." #timestampNameInput />
+                <formly-form class="d-flex col-lg-10" [form]="timestampForm" [fields]="timestampFields" [model]="timestampModel"></formly-form>
                 <div class="col-lg-1 d-flex flex-row align-items-center">
                     <i class="icon hover-red fa fa-1-5x fa-times mx-1" (click)="cancelTimestampCreateState()"></i>
-                    <i class="icon hover-green fa fa-1-5x fa-check mx-1" (click)="createTimestamp(timestampTimeInput, timestampNameInput)"></i>
+                    <i class="icon hover-green fa fa-1-5x fa-check mx-1" (click)="createTimestamp()"></i>
                 </div>
-            </div>
+            </form>
 
             <!-- Timestamp List -->
             <div *ngFor="let timestamp of timestamps" class="row timestamp-box my-1">
