Gave wrapper a create mode
Now you can also create sessions with it

--- a/src/app/components/utility/session-update-modal/session-update-modal.component.html
+++ b/src/app/components/utility/session-update-modal/session-update-modal.component.html
@@ -23,5 +23,6 @@
 </ng-template>
 
 <div class="form-group mx-2">
-    <div class="btn btn-outline-info fa {{icon}}" title="Edit selected Session" (click)="open(content)"></div>
+    <div *ngIf="formState===constants.updateState" class="btn btn-outline-info fa {{icon}}" title="Edit selected Session" (click)="open(content)"></div>
+    <div *ngIf="formState===constants.createState" class="btn btn-outline-info fa {{icon}}" title="Create new Session" (click)="open(content)"></div>    
 </div>
